# python-coinbasepro

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg  setup.py  version.py
.github/workflows/: build_package.yml  build_test_package.yml  prod_pypi_upload.yml  run_tests.yml  test_package.yml  test_upload.yml
cbp_client/: __init__.py  api.py  api_authenticated.py  api_public.py  auth.py  candle.py  helpers.py  history.py  pagination.py  product.py
coinbase_pro/: __init__.py  api.py  api_authenticated.py  api_public.py  auth.py  authenticated_api.py  history.py  main.py  public_api.py
tests/: conftest.py  test_api.py  test_authenticated_api.py  test_candle.py  test_history.py  test_pagination.py  test_public_api.py
