[metadata]
name = cbp-client
version = 1.1.0
author = TerrellV
author_email = terrell.vest@gmail.com
description = An unofficial python package for interacting with the Coinbase Pro API
long_description = file: README.md
long_description_content_type = text/markdown
keywords = coinbase, coinbase pro, cbp, crypto, bitcoin, coinbasepro, python, api
url = https://github.com/TerrellV/python-coinbasepro
project_urls =
    Bug Tracker = https://github.com/TerrellV/python-coinbasepro/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
install_requires =
    requests ==2.25.1

packages = find:
python_requires = >=3.6

[options.packages.find]
exclude =
    tests
# [options.packages.find]
# where = cbp_client